syntax = "proto3";

package fig.cosmos.transform.v1;

option go_package = "github.com/figment-networks/cosmos-protobuf-def/pbtransform";

message EventFilter {
  repeated string event_types = 1;
}
